--- a/css/signin/SignIn.css
+++ b/css/signin/SignIn.css
@@ -6,7 +6,7 @@
     background-color: #f1f1f1;
     padding: 0px;
     margin: 0px;
-    background-image: url('/Assets/background.jpg');
+    background-image: url('../../Assets/background.jpg');
     background-size: cover;
     background-position: center;
 }
@@ -25,6 +25,24 @@
     margin: 0 45px 0 0;
     padding: 0;
 }
+
+.successful h3, .Invalid h3 {
+    display: none;
+    align-items: center;
+    justify-content: center;
+    margin: 0 0 0 0;
+    padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    color: #00a120;
+}
+.Invalid h3{
+color: #ff0000;
+}
+.successful-msg, .Invalid-msg {
+    display: flex;
+}
+
 .username h3, .password h3 {
     margin: 0;
     color: #5d1212;
