--- a/css/appointment/appointment.css
+++ b/css/appointment/appointment.css
@@ -7,11 +7,26 @@ body {
     font-family: 'Nunito', sans-serif;
     color: #343a40;
     line-height: 1;
-    display: flex;
+    /* display: flex; */
     justify-content: center;
 }
 
+.footer-container{
+    padding: 27px;
+}
+
+.table {
+    height: 100vh;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 table {
+    
     width: 800px;
     margin-top: 100px;
     border-collapse: collapse;
@@ -35,4 +50,20 @@ tbody tr:nth-child(even) {
 
 tbody tr:hover {
     background-color: #ddd;
+}
+
+
+@media screen and (max-width: 768px) {
+    table {
+        width: 100%;
+        margin: 20px 0;
+    }
+    th, td {
+        padding: 10px;
+        font-size: 14px;
+    }
+    thead th {
+        font-size: 16px;
+    }
+    
 }
