--- a/css/schedule/schedule.css
+++ b/css/schedule/schedule.css
@@ -66,3 +66,10 @@ button:hover {
   text-align: center;
   font-weight: bold;
 }
+
+@media screen and (max-width: 768px) {
+  .schedule-container-2 {
+    width: 90%;
+    padding: 15px;
+  }
+}
