--- a/css/signin/SignIn.css
+++ b/css/signin/SignIn.css
@@ -26,7 +26,7 @@
     flex-direction: column;
     width: 40%;
     align-items: center;
-    background-color: #fff;
+    background-color: rgb(255, 255, 255,0.7);
     border-radius: 10px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
@@ -60,6 +60,10 @@
     border-radius: 5px;
     font-weight: bold;
     cursor: pointer;
+}
+
+.submit button:hover {
+    background-color: #881818;
 }
 
 @media screen and (max-width: 768px) {
