--- a/css/main/background1.css
+++ b/css/main/background1.css
@@ -12,7 +12,7 @@
     z-index: -1;
 }
 
-.background1 h2 {
+.background1 h2, .background1 p {
     position: absolute;
     top: 35%;
     left: 100px;
@@ -21,7 +21,24 @@
     z-index: 1;
 }
 
+.background1 p {
+    top: 54%;
+    left: 100px;
+    font-size: 15px;
+}
+
+.background1 span:hover {
+    color: #5d1212;
+}
+
+
 @media screen and (max-width: 768px) {
+    .background1 p {
+        top: 60%;
+        left: 41px;
+        font-size: 9px;
+    }
+    
     .background1 h2 {
         top: 20%;
         left: 40px;
