--- a/css/appointment/appointment.css
+++ b/css/appointment/appointment.css
@@ -15,7 +15,28 @@ body {
     padding: 27px;
 }
 
+.container-table {
+    height: 100vh;
+    margin: 40px 0;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.container-inner {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+}
+
+.container-table h2 {
+    font-size: 30px;
+    color: #5d1212;
+    margin: 15px 0 30px 0;
+}
+
 .table {
+
     height: 100vh;
 }
 
@@ -28,7 +49,7 @@ body {
 table {
     
     width: 800px;
-    margin-top: 100px;
+
     border-collapse: collapse;
     font-size: 18px;
 }
@@ -36,6 +57,7 @@ table {
 th, td {
     padding: 16px 24px;
     text-align: left;
+    border: 1px solid #dddddd7e;
 }
 
 thead th {
