Enhance appointment booking logic and improve responsive design for devices and services pages

--- a/css/Services/services.css
+++ b/css/Services/services.css
@@ -50,3 +50,24 @@
   font-size: 16px;
   line-height: 1.6;
 }
+
+
+@media screen and (max-width: 768px) {
+  .services-container {
+    width: 100%;
+    height: auto;
+    margin: 30px 0;
+    padding: 0px;
+  }
+  
+  .description {
+    font-size: 14px;
+    padding: 10px;
+  }
+  
+  .panel {
+    font-size: 14px;
+    padding: 0 10px 10px 30px;
+  }
+  
+}
