--- a/css/appointment/appointment.css
+++ b/css/appointment/appointment.css
@@ -19,6 +19,7 @@ body {
     height: 100vh;
     margin: 40px 0;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
 }
 
 .container-inner {
