--- a/css/patientSignin/patientSignin.css
+++ b/css/patientSignin/patientSignin.css
@@ -88,20 +88,20 @@
 }
 
 @media screen and (max-width: 768px) {
-    .signin-container {
+    .patient-signin-container {
         flex-direction: column;
   
     }
     
-    .border {
+    .patient-border {
         width: 90%;
         padding: 0px;
         margin: 0px;
     }
-    .username, .password {
+    .patient-username, .patient-password {
         margin: 0 30px 0 0;
     }
-    .username input, .password input {
+    .patient-username input, .patient-password input {
         width: 100%;
         margin: 0 0 0 20px;
     }
