--- a/css/schedule/schedule.css
+++ b/css/schedule/schedule.css
@@ -77,7 +77,11 @@ button:hover {
 
 @media screen and (max-width: 768px) {
   .schedule-container-2 {
-    width: 90%;
+    width: 80%;
     padding: 15px;
+  }
+  
+  .navbar ul button {
+    margin-left: 40px;
   }
 }
