--- a/css/Services/services.css
+++ b/css/Services/services.css
@@ -57,9 +57,14 @@
     width: 100%;
     height: auto;
     margin: 30px 0;
-    padding: 0px;
+    padding: 1px;
   }
   
+  .services-container h2 {
+    font-size: 22px;
+    margin-bottom: 20px;
+  }
+
   .description {
     font-size: 14px;
     padding: 10px;
