--- a/css/header/header.css
+++ b/css/header/header.css
@@ -77,6 +77,12 @@
         font-size: 20px;
     }
 
+    .navbar {
+        flex-direction: column;
+        align-items: center;
+        margin: 0;
+        padding: 0;
+    }
     .navbar ul {
         margin : 16px 0;
         padding:0;
