--- a/css/Services/services.css
+++ b/css/Services/services.css
@@ -56,8 +56,8 @@
   .services-container {
     width: 100%;
     height: auto;
-    margin: 30px 0;
-    padding: 1px;
+    margin: 30px 0 210px 0;
+    padding: 1px 0;
   }
   
   .services-container h2 {
